--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,8 @@ terraform.tfstate.*
 !.github/
 !.github/workflows/
 !.github/workflows/*.yml
+
+# Ignore Telethon session files
+ethio_ingestor.session
+ethio_ingestor.session-journal
+!config/dev.yaml
