data: push preprocessed data to dvc

--- a/.dvc/config
+++ b/.dvc/config
@@ -2,3 +2,5 @@
     remote = gdrive_remote
 ['remote "gdrive_remote"']
     url = gdrive://1UveBgDaVcNQi1T-fLA-Kz03hPRqJ_ayk
+    gdrive_use_service_account = true
+    gdrive_service_account_json_file_path = /home/teshager/.config/gdrive/dvc-drive-remote-8f00f1ce2758.json
